# drakengard-3-pt-br-translation

./: .gitignore  Makefile  README.en.md  README.md  main.py  pyproject.toml
config/: config.py
config/toml/: cli.toml  llm.toml  settings.toml  typer.toml
source/: PS3TOC.TXT
src/chat_gpt/: __init__.py  g4f_wrapper.py  llm_model_wrapper.py
src/exceptions/: __init__.py  empty_message_exception.py
src/helpers/: hex_helper.py  pandas_helper.py  path_helper.py  string_helper.py
src/translator_engine/: __init__.py  chat_gpt_translator.py  translator_engine.py
texts/raw/: Ability.txt  Ability_Name.txt  C_00.txt  C_1011.txt  C_1011_Name.txt  C_1021.txt  C_1021_Name.txt  C_1311.txt  C_1311_Name.txt  C_1411.txt  C_1411_Name.txt  C_2011.txt  C_2011_Name.txt  C_2021.txt  C_2021_Name.txt  C_2041.txt  C_2041_Name.txt  C_2311.txt  C_2311_Name.txt  C_2411.txt  C_2411_Name.txt  C_3011.txt  C_3011_Name.txt  C_3041.txt  C_3041_Name.txt  C_3111.txt  C_3211.txt  C_3211_Name.txt  C_3221.txt  C_3221_Name.txt  C_3241.txt  C_3241_Name.txt  C_3251_Name.txt  C_3311.txt  C_3311_Name.txt  C_4011.txt  C_4011_Name.txt  C_4021.txt  C_4021_Name.txt  C_4121.txt  (+153 more)
texts/result/: Sqex03DataMessage.txt  export.json
texts/translation/: Ability.csv  Ability_Name.csv  C_00.csv  C_00_Name.csv  C_1011.csv  C_1011_Name.csv  C_1021.csv  C_1021_Name.csv  C_1311.csv  C_1311_Name.csv  C_1411.csv  C_1411_Name.csv  C_2011.csv  C_2011_Name.csv  C_2021.csv  C_2021_Name.csv  C_2041.csv  C_2041_Name.csv  C_2311.csv  C_2311_Name.csv  C_2411.csv  C_2411_Name.csv  C_3011.csv  C_3011_Name.csv  C_3041.csv  (+172 more)
(+6 files in other folders)
